@@ -253,7 +253,139 @@ test filesystem-5.1 {cache and ~} {
     }
     -result {{Parent of ~ \(/foo/bar/blah\) is (/foo/bar|foo:bar)} {Parent of ~ \(/a/b/c\) is (/a/b|a:b)}}
 }
-	
+
+test filesystem-6.1 {empty file name} {
+    list [catch {open ""} msg] $msg
+} {1 {couldn't open "": no such file or directory}}
+
+test filesystem-6.2 {empty file name} {
+    list [catch {file stat "" arr} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.3 {empty file name} {
+    list [catch {file atime ""} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.4 {empty file name} {knownBug} {
+    list [catch {file attributes ""} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.5 {empty file name} {
+    list [catch {file copy "" ""} msg] $msg
+} {1 {error copying "": no such file or directory}}
+
+test filesystem-6.6 {empty file name} {
+    list [catch {file delete ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.7 {empty file name} {
+    list [catch {file dirname ""} msg] $msg
+} {0 .}
+
+test filesystem-6.8 {empty file name} {
+    list [catch {file executable ""} msg] $msg
+} {0 0}
+
+test filesystem-6.9 {empty file name} {
+    list [catch {file exists ""} msg] $msg
+} {0 0}
+
+test filesystem-6.10 {empty file name} {
+    list [catch {file extension ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.11 {empty file name} {
+    list [catch {file isdirectory ""} msg] $msg
+} {0 0}
+
+test filesystem-6.12 {empty file name} {
+    list [catch {file isfile ""} msg] $msg
+} {0 0}
+
+test filesystem-6.13 {empty file name} {
+    list [catch {file join ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.14 {empty file name} {
+    list [catch {file link ""} msg] $msg
+} {1 {could not read link "": no such file or directory}}
+
+test filesystem-6.15 {empty file name} {
+    list [catch {file lstat "" arr} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.16 {empty file name} {
+    list [catch {file mtime ""} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.17 {empty file name} {
+    list [catch {file mtime "" 0} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.18 {empty file name} {
+    list [catch {file mkdir ""} msg] $msg
+} {1 {can't create directory "": no such file or directory}}
+
+test filesystem-6.19 {empty file name} {
+    list [catch {file nativename ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.20 {empty file name} {
+    list [catch {file normalize ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.21 {empty file name} {
+    list [catch {file owned ""} msg] $msg
+} {0 0}
+
+test filesystem-6.22 {empty file name} {
+    list [catch {file pathtype ""} msg] $msg
+} {0 relative}
+
+test filesystem-6.23 {empty file name} {
+    list [catch {file readable ""} msg] $msg
+} {0 0}
+
+test filesystem-6.24 {empty file name} {
+    list [catch {file readlink ""} msg] $msg
+} {1 {could not readlink "": no such file or directory}}
+
+test filesystem-6.25 {empty file name} {
+    list [catch {file rename "" ""} msg] $msg
+} {1 {error renaming "": no such file or directory}}
+
+test filesystem-6.26 {empty file name} {
+    list [catch {file rootname ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.27 {empty file name} {
+    list [catch {file separator ""} msg] $msg
+} {1 {Unrecognised path}}
+
+test filesystem-6.28 {empty file name} {
+    list [catch {file size ""} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.29 {empty file name} {
+    list [catch {file split ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.30 {empty file name} {
+    list [catch {file system ""} msg] $msg
+} {1 {Unrecognised path}}
+
+test filesystem-6.31 {empty file name} {
+    list [catch {file tail ""} msg] $msg
+} {0 {}}
+
+test filesystem-6.32 {empty file name} {
+    list [catch {file type ""} msg] $msg
+} {1 {could not read "": no such file or directory}}
+
+test filesystem-6.33 {empty file name} {
+    list [catch {file writable ""} msg] $msg
+} {0 0}
+
 # Make sure the testfilesystem hasn't been registered.
 while {![catch {testfilesystem 0}]} {}
 }
